k8s/stock-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-ingress
  namespace: default
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /stock
            pathType: Prefix
            backend:
              service:
                name: stock-service
                port:
                  number: 80
